@@ -169,7 +169,7 @@ def default_input_form(id,arguments,action='query',
                         lambda a:
                         ('<tr> <th>%s</th>\n'
                          '     <td><input name="%s"\n'
-                         '                width=30 value="%s">'
+                         '                size="30" value="%s">'
                          '     </td></tr>'
                          % (nicify(a[0]),
                             (
