@@ -40,7 +40,9 @@ Zope Changes
         text/<foo> types
 
     Bugs fixed
-    
+
+      - Collector #1576: Fixed Z Search Interface to use proper HTML.
+
       - Collector #1127: strftime did not take timezone into account.
 
       - Collector #1569/DateTime: Added a new ISO8601-method that will
